fix link readability

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ main a:link {
 }
 
 main a:visited {
-    color: rgb(35, 100, 131);
+    color: rgb(82, 134, 158);
 }
 
 main p {
